--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
-jobs:
-  build:
-    docker:
-      - image: cimg/<language>:<version TAG>
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+- when:
+    condition: "<< parameters, checkout_from_github >>"
     steps:
-      - checkout
       - run: echo "Preparing to deploy version << parameters, checkout_from_github >>"
+
+
+
+
+
