--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,23 +8,19 @@ parameters:
     type: boolean
     default: false
 
+jobs:
+  mytestjob:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - checkout
+      - when:
+          condition: << pipeline.parameters.deploy >>
+          steps:
+            - run: echo "Preparing to deploy version"
+
 workflows:
-  version: 2
   integration_tests:
     when: << pipeline.parameters.run_integration_tests >>
     jobs:
       - mytestjob
-
-jobs:
-  mytestjob:
-    steps:
-      - checkout
-      - when:
-          condition: "<< parameters, checkout_from_github >>"
-          steps:
-            - run: echo "Preparing to deploy version << parameters, checkout_from_github >>"
-
-
-
-
-
