--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,16 @@ deploy_workspace_executor: &deploy_workspace_executor
         AWS_DEFAULT_OUTPUT: json
   working_directory: /tmp
 
+commands:
+  sayhello:
+    description: "A very simple command for demonstration purposes"
+    parameters:
+      to:
+        type: string
+        default: "GitHub!"
+    steps:
+      - run: echo << parameters.to >>
+
 jobs:  
   initialise:
     <<: *build_workspace_executor
@@ -191,6 +201,8 @@ jobs:
       - when:
           condition: << parameters.checkout_from_github >>
           steps:
+            - sayhello:
+                to: "Sophie!"
             - run: echo "Preparing to deploy version << pipeline.parameters.tag-to-deploy >>"
             - run: echo "Checkout and clone repo steps are being run as the build is trggered through tag"
             - run:
